/**
 * @jest-environment node
 */

import React from 'react'
import withRedux from 'next-redux-wrapper'
import {render} from 'enzyme'
import toJson from 'enzyme-to-json'

import {
  configureStore,
  getInitialProps,
  getServer,
  snapshot,
  Simple,
  Skip,
  Sync,
  Async
} from './test-utils'

import withReduxSaga from './index'

/** sync mode */
test('wrapped component passes along props in sync mode', () => {
  const WrappedComponent = withReduxSaga(Simple)
  const wrapper = render(<WrappedComponent thing="world" />)
  expect(toJson(wrapper)).toMatchSnapshot()
})

test('wrapped component skips getInitialProps in sync mode', async () => {
  const WrappedComponent = withRedux(configureStore)(withReduxSaga(Skip))
  const props = await getInitialProps(WrappedComponent, getServer())
  snapshot(WrappedComponent, props)
})

test('wrapped component awaits sync getInitialProps in sync mode', async () => {
  const WrappedComponent = withRedux(configureStore)(withReduxSaga(Sync))

  const props = await getInitialProps(WrappedComponent, getServer())
  expect(props.initialProps.static).toBe('sync')
  expect(props.initialState.data).toBe('sync')

  snapshot(WrappedComponent, props)
})

test('wrapped component awaits async getInitialProps in sync mode', async () => {
  const WrappedComponent = withRedux(configureStore)(withReduxSaga(Async))

  const props = await getInitialProps(WrappedComponent, getServer())
  expect(props.initialProps.static).toBe('async')
  expect(props.initialState.data).toBe('async')

  snapshot(WrappedComponent, props)
})

/** async mode */
test('wrapped component passes along props in async mode', () => {
  const WrappedComponent = withReduxSaga({async: true})(Simple)
  const wrapper = render(<WrappedComponent thing="world" />)
  expect(toJson(wrapper)).toMatchSnapshot()
})

test('wrapped component skips getInitialProps in async mode', async () => {
  const WrappedComponent = withRedux(configureStore)(
    withReduxSaga({async: true})(Skip)
  )
  const props = await getInitialProps(WrappedComponent, getServer())
  snapshot(WrappedComponent, props)
})

test('wrapped component awaits sync getInitialProps in async mode', async () => {
  const WrappedComponent = withRedux(configureStore)(
    withReduxSaga({async: true})(Sync)
  )

  const props = await getInitialProps(WrappedComponent, getServer())
  expect(props.initialProps.static).toBe('sync')
  expect(props.initialState.data).toBe('sync')

  snapshot(WrappedComponent, props)
})

test('wrapped component awaits async getInitialProps in async mode', async () => {
  const WrappedComponent = withRedux(configureStore)(
    withReduxSaga({async: true})(Async)
  )

  const props = await getInitialProps(WrappedComponent, getServer())
  expect(props.initialProps.static).toBe('async')
  expect(props.initialState.data).toBe('async')

  snapshot(WrappedComponent, props)
})
