// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[async mode] wrapped component awaits async getInitialProps 1`] = `
<div>
  Async
</div>
`;

exports[`[async mode] wrapped component awaits sync getInitialProps 1`] = `
<div>
  Sync
</div>
`;

exports[`[async mode] wrapped component passes along props 1`] = `
<div>
  Hello !
</div>
`;

exports[`[async mode] wrapped component skips getInitialProps 1`] = `
<div>
  Skip
</div>
`;

exports[`[sync mode] wrapped component awaits async getInitialProps 1`] = `
<div>
  Async
</div>
`;

exports[`[sync mode] wrapped component awaits sync getInitialProps 1`] = `
<div>
  Sync
</div>
`;

exports[`[sync mode] wrapped component passes along props 1`] = `
<div>
  Hello !
</div>
`;

exports[`[sync mode] wrapped component skips getInitialProps 1`] = `
<div>
  Skip
</div>
`;
